# cuas-radio-interceptor

./: .gitignore  BLUEPRINT.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: build-sdr-stack.yml  test-signal-logic.yml
infrastructure/: classifier-node.yaml  sdr-gateway.yaml  timescaledb.yaml
sdr_ingestion/: CMakeLists.txt  Dockerfile
sdr_ingestion/include/: sdr_types.hpp
sdr_ingestion/src/: main.cpp
sdr_ingestion/src/buffer/: circular_buffer.hpp
sdr_ingestion/src/dsp/: decimation.cpp  decimation.hpp  fast_fourier.cpp  fast_fourier.hpp
signal_classifier/: Dockerfile  go.mod
signal_classifier/cmd/classifier/: main.go
signal_classifier/internal/analysis/: burst_detector.go  burst_detector_test.go  distance_estimator.go  distance_estimator_test.go
signal_classifier/internal/protocol/: elrs_signature.go  ocusync_signature.go  protocol_test.go
signal_classifier/internal/stream/: zmq_subscriber.go
tactical_dashboard/: Dockerfile  index.html  package-lock.json  package.json
tactical_dashboard/src/: App.tsx  styles.css  types.ts  vite-env.d.ts
tactical_dashboard/src/components/: SignalStrengthMeter.tsx  ThreatAlerts.tsx  WaterfallDisplay.tsx
tactical_dashboard/src/rendering/: spectrogram_shader.glsl
